# AutoCrate-V12

./: .coverage  .firebaserc  .gitignore  .vercelignore  ANTIVIRUS_EXCLUSIONS.md  AutoCrate.spec  CHANGELOG.md  CLAUDE.md  CLEANUP_SUMMARY.md  CLIENT_DEPLOYMENT_GUIDE.md  CODING_STANDARDS.md  Crate_135x135x135_Clearance_2.0.exp  Crate_30x30x120_Clearance_2.0.exp  Crate_80x80x80_Clearance_2.0.exp  Crate_96x100x30_Clearance_2.0.exp  DEPLOYMENT.md  DEPLOY_NOW.md  DEV_SUITE_TEST_REPORT.md  Dockerfile  ENHANCED_FILENAME_CHANGES.md  EXPRESSION_FILE_MANAGEMENT.md  FIXES_APPLIED.md  FUTURE_IMPROVEMENTS.md  GEMINI.md  HOSTING_OPTIONS.md  IMPLEMENTATION_ROADMAP.md  IT_BLOCKING_WORKAROUND.md  LICENSE  LINK_MANAGEMENT_SYSTEM.md  LOGGING_GUIDE.md  NX_COORDINATE_MAPPING.md  NX_EXPRESSION_GENERATION_ANALYSIS.md  OFFLINE_VERSION_README.md  PROJECT_STRUCTURE.md  RAILWAY_SETUP.md  README.md  README_OVERHAUL.md  SECURITY_AUDIT_REPORT.md  SINGLE_SOURCE_OF_TRUTH.md  SPLICE_CLEAT_BUG_FIX_SUMMARY.md  (+131 more)
.claude/: PROJECT_CONTEXT.md  settings.local.json
.github/: pull_request_template.md
api/: .gitignore  Dockerfile  app.py  hello.py  index.py  logs.py  main.py  nixpacks.toml  nx_expression_service.py  requirements-simple.txt  start.sh  test.py
archive/: README.md
autocrate/: autocrate_main.py  back_panel_logic.py  debug_logger.py  expression_file_manager.py  front_panel_logic.py  klimp_placement_logic.py  klimp_placement_logic_all_sides.py  klimp_quaternion_integration.py  klimp_quaternion_system.py  klimp_unit_vector_integration.py  klimp_unit_vector_system.py  log_analyst.py  modern_gui.py  nx_expressions_generator.py  nx_expressions_generator_classic.py  security_utils.py  startup_analyzer.py  test_agent.py  ultra_modern_gui.py  ultra_modern_gui_fixed.py  ultra_modern_gui_threaded.py  visualization_system.py
debug/: analyze_logs.py  analyze_logs_simple.py  build_performance_test.py  cleanup_redundant_files.py  compare_nx_detailed.py  compare_nx_outputs.py  debug_nx_generation.py  trace_calculation_values.py  trace_desktop_calc.py  trace_material_addition.py  trace_web_calc.py  verify_nx_match.py
docs/: AI_COLLABORATION_LOG.md  AI_DEVELOPMENT_TECHNIQUES.md  AI_DEVELOPMENT_TIMELINE.md  MASTER_GUIDE.md  README.md  codebase_summary.md  conf.py  index.html
(+594 files in other folders)
